{
    "name": "InputActions_Object",
    "maps": [
        {
            "name": "Game",
            "id": "03957035-c9fe-448a-abfd-a324b6bee3f3",
            "actions": [
                {
                    "name": "P1_Shoot",
                    "type": "Button",
                    "id": "5d135049-c893-49ae-942b-e2fb5f6fbf04",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "P1_Bluff",
                    "type": "Button",
                    "id": "784e5663-8796-4fbb-97c9-f37a00eca7de",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "P1_Dodge",
                    "type": "Button",
                    "id": "4cba7501-c48a-4d6a-90fa-768e04a1ff27",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "P2_Shoot",
                    "type": "Button",
                    "id": "5485a4e4-d215-4c64-8702-6a689e7ba0d5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "P2_Bluff",
                    "type": "Button",
                    "id": "c197a0be-c5f6-42d5-865f-0804f3bc32b0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "P2_Dodge",
                    "type": "Button",
                    "id": "9bdc0b16-9d52-4159-97d5-032975190448",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c1d0cf00-75e2-4601-ab8d-9f40ed7f78ab",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P1_Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2aaf9f30-eda0-439f-a917-9f87ca4cabd1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P1_Bluff",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c56d865f-c2f6-4c5f-b201-a46d215068cd",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P1_Dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5da34c64-c934-4525-94e2-81d5ec3f0a9c",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P2_Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c5bf605b-8687-4096-b0bb-9526a1ce8c9a",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P2_Bluff",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "06ccfcf5-0dbf-4392-aa47-7783d173f245",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P2_Dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}